<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        tools:context=".FourthFragment">

        <TextView
            android:id="@+id/Covid_header"
            android:layout_width="380dp"
            android:layout_height="42dp"
            android:fontFamily="monospace"
            android:text="@string/MedicalCondition"
            android:textSize="32dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />

        <TextView
            android:id="@+id/respiratory"
            android:layout_width="224dp"
            android:layout_height="61dp"
            android:fontFamily="monospace"
            android:text="@string/respiratory"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.143" />

        <CheckBox
            android:id="@+id/none"
            android:layout_width="239dp"
            android:layout_height="49dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/NONE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Covid_header"
            app:layout_constraintVertical_bias="0.18" />

        <CheckBox
            android:id="@+id/fibrosis"
            android:layout_width="239dp"
            android:layout_height="49dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/CRYSTIC_FIBROSIS"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.416" />

        <CheckBox
            android:id="@+id/other_lung_diseases"
            android:layout_width="239dp"
            android:layout_height="49dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/OTHER_LUNG_DISEASES"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.83" />

        <CheckBox
            android:id="@+id/emphysema"
            android:layout_width="239dp"
            android:layout_height="49dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/COPD_EMPHYSEMA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.522" />

        <CheckBox
            android:id="@+id/pulmonary_fibrosis"
            android:layout_width="239dp"
            android:layout_height="49dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/PULMONARY_FIBROSIS"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.726" />

        <CheckBox
            android:id="@+id/resp_pnts"
            android:layout_width="239dp"
            android:layout_height="49dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/prefer_not_to_say"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.311" />

        <CheckBox
            android:id="@+id/asthma"
            android:layout_width="239dp"
            android:layout_height="49dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/ASTHMA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.623" />

        <Button
            android:id="@+id/button_fourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.946" />


    </androidx.constraintlayout.widget.ConstraintLayout>